--- a/calendar-webapp/src/main/webapp/skin/less/uiCalendars/Style.less
+++ b/calendar-webapp/src/main/webapp/skin/less/uiCalendars/Style.less
@@ -82,7 +82,7 @@
 	padding: 10px 5px;
 }
 .calendarWorkingWorkspace {
-	padding: 20px;	
+	padding: 20px 20px 0 20px;
 	.uiActionBar {
 		margin: 0 0 15px 0;
 	}
